<resources>
    <string name="app_name">CatalinaIsland</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="txtTitle">Catalina Ferry Tickets</string>
    <string name="btnCost">COMPUTE COST</string>
    <string name="txtTickets">Number of Tickets</string>
    <string name="prompt">Select Trip</string>
    <string name="description">Trip Image</string>
    <string-array name="txtGroup">
        <item>To Catalina Island</item>
        <item>To Long Beach</item>
        <item>To Ventura Beach</item>
    </string-array>

</resources>
