<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTitle"
        android:id="@+id/txtTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="36sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtTickets"
        android:hint="@string/txtTickets"
        android:textSize="30sp"
        android:layout_below="@+id/imgFerry"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtGroup"
        android:layout_below="@+id/txtTickets"
        android:layout_centerHorizontal="true"
        android:spinnerMode="dialog"
        android:prompt="@string/prompt"
        android:entries="@array/txtGroup" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCost"
        android:id="@+id/btnCost"
        android:layout_below="@+id/txtGroup"
        android:layout_centerHorizontal="true"
        android:textSize="35sp" />

    <ImageView
        android:layout_width="400sp"
        android:layout_height="250dp"
        android:id="@+id/imgFerry"
        android:src="@drawable/ferry"
        android:layout_below="@+id/txtTitle"
        android:layout_alignRight="@+id/txtTitle"
        android:layout_alignEnd="@+id/txtTitle"
        android:contentDescription="@string/description" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtResult"
        android:layout_below="@+id/btnCost"
        android:layout_centerHorizontal="true"
        android:textSize="25sp" />
</RelativeLayout>
